// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ListColumn /> should render a list column with number content 1`] = `
<ListColumn
  alignRight={false}
  cell={[Function]}
  data={
    Array [
      Object {
        "name": "Test Name",
        "number": 100,
      },
    ]
  }
  header=""
  isHeader={false}
  rowIndex={0}
  size={
    Object {
      "sm": 6,
    }
  }
  skeletonOptions={
    Object {
      "showSkeleton": false,
    }
  }
>
  <Column
    sm={6}
  >
    <Col
      lg={6}
      md={6}
      sm={6}
      type="row"
    >
      <StyledComponent
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-htpNat",
              "isStatic": false,
              "lastClassName": "cdrDft",
              "rules": Array [
                "
  box-sizing: border-box;
  flex: 0 0 auto;
  padding-right: ",
                [Function],
                "rem;
  padding-left: ",
                [Function],
                "rem;

  ",
                [Function],
                "

  ",
                [Function],
                "

  ",
                [Function],
                "
",
              ],
            },
            "displayName": "Col",
            "foldedComponentIds": Array [],
            "propTypes": Object {
              "children": [Function],
              "lg": [Function],
              "lgOffset": [Function],
              "md": [Function],
              "mdOffset": [Function],
              "reverse": [Function],
              "sm": [Function],
              "smOffset": [Function],
              "xs": [Function],
              "xsOffset": [Function],
            },
            "render": [Function],
            "styledComponentId": "sc-htpNat",
            "target": "div",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
        lg={6}
        md={6}
        sm={6}
        type="row"
      >
        <div
          className="cdrDft"
          type="row"
        >
          <div
            className="list-column"
            data-component-type="smart_list_column"
          >
            100
          </div>
        </div>
      </StyledComponent>
    </Col>
  </Column>
</ListColumn>
`;

exports[`<ListColumn /> should render a list column with the right header 1`] = `
<ListColumn
  alignRight={false}
  cell={[Function]}
  data={
    Array [
      Object {
        "name": "Test Name",
        "number": 100,
      },
    ]
  }
  header="Test"
  isHeader={true}
  rowIndex={0}
  size={
    Object {
      "sm": 6,
    }
  }
  skeletonOptions={
    Object {
      "showSkeleton": false,
    }
  }
>
  <Column
    sm={6}
  >
    <Col
      lg={6}
      md={6}
      sm={6}
      type="row"
    >
      <StyledComponent
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-htpNat",
              "isStatic": false,
              "lastClassName": "cdrDft",
              "rules": Array [
                "
  box-sizing: border-box;
  flex: 0 0 auto;
  padding-right: ",
                [Function],
                "rem;
  padding-left: ",
                [Function],
                "rem;

  ",
                [Function],
                "

  ",
                [Function],
                "

  ",
                [Function],
                "
",
              ],
            },
            "displayName": "Col",
            "foldedComponentIds": Array [],
            "propTypes": Object {
              "children": [Function],
              "lg": [Function],
              "lgOffset": [Function],
              "md": [Function],
              "mdOffset": [Function],
              "reverse": [Function],
              "sm": [Function],
              "smOffset": [Function],
              "xs": [Function],
              "xsOffset": [Function],
            },
            "render": [Function],
            "styledComponentId": "sc-htpNat",
            "target": "div",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
        lg={6}
        md={6}
        sm={6}
        type="row"
      >
        <div
          className="cdrDft"
          type="row"
        >
          <div
            className="list-column"
            data-component-type="smart_list_column"
          >
            <ListHeader
              label="Test"
            >
              <span
                className="ListHeader"
              >
                Test
              </span>
            </ListHeader>
          </div>
        </div>
      </StyledComponent>
    </Col>
  </Column>
</ListColumn>
`;

exports[`<ListColumn /> should render a list column with the right non-header cell content 1`] = `
<ListColumn
  alignRight={false}
  cell={[Function]}
  data={
    Array [
      Object {
        "name": "Test Name",
        "number": 100,
      },
    ]
  }
  header=""
  isHeader={false}
  rowIndex={0}
  size={
    Object {
      "sm": 6,
    }
  }
  skeletonOptions={
    Object {
      "showSkeleton": false,
    }
  }
>
  <Column
    sm={6}
  >
    <Col
      lg={6}
      md={6}
      sm={6}
      type="row"
    >
      <StyledComponent
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-htpNat",
              "isStatic": false,
              "lastClassName": "cdrDft",
              "rules": Array [
                "
  box-sizing: border-box;
  flex: 0 0 auto;
  padding-right: ",
                [Function],
                "rem;
  padding-left: ",
                [Function],
                "rem;

  ",
                [Function],
                "

  ",
                [Function],
                "

  ",
                [Function],
                "
",
              ],
            },
            "displayName": "Col",
            "foldedComponentIds": Array [],
            "propTypes": Object {
              "children": [Function],
              "lg": [Function],
              "lgOffset": [Function],
              "md": [Function],
              "mdOffset": [Function],
              "reverse": [Function],
              "sm": [Function],
              "smOffset": [Function],
              "xs": [Function],
              "xsOffset": [Function],
            },
            "render": [Function],
            "styledComponentId": "sc-htpNat",
            "target": "div",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
        lg={6}
        md={6}
        sm={6}
        type="row"
      >
        <div
          className="cdrDft"
          type="row"
        >
          <div
            className="list-column"
            data-component-type="smart_list_column"
          >
            <div>
              Test Name
            </div>
          </div>
        </div>
      </StyledComponent>
    </Col>
  </Column>
</ListColumn>
`;
